--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.2",
     "typescript": "4.9.5"
   }
 }
