--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.2",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   }
 }
